# soft-kvm

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md  pyproject.toml
config/: monitors.example.toml
docs/: FINDINGS.md  PHASE2_AUTH.md  PHASE3_HOTKEY.md  README.md
scripts/: toggle-monitors.sh
src/soft_kvm/: __init__.py  __main__.py  auth.py  cli.py  client.py  commands.py  config.py  discovery.py  errors.py  logging_setup.py  models.py  monitors.py  switcher.py
tests/fixtures/: .gitkeep  command_aaaaaaaa_aaaa_4aaa_8aaa_aaaaaaaaaaaa.json  devices.json  discovery_summary.json  status_aaaaaaaa_aaaa_4aaa_8aaa_aaaaaaaaaaaa_after.json  status_aaaaaaaa_aaaa_4aaa_8aaa_aaaaaaaaaaaa_before.json  status_left_monitor.json  status_right_monitor.json
