[project]
name = "soft-kvm"
version = "0.1.0"
description = "Switch two Samsung ViewFinity S9 5K monitors between two Macs by changing each monitor's input source over the network."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Mike Noe", email = "mikejnoe@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "typer>=0.26.7",
]

[project.scripts]
soft-kvm = "soft_kvm.cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# pydantic plugin gives precise typing for BaseModel/BaseSettings
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
